[package]
name = "membership"
version = "0.1.0"
authors = ["Maté Antunovic <just.mate.antunovic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-raft = "0.4.3"
serde = "1.0.105"
bincode = "1.2.1"
actix-web = "2.0.0"
rocket_contrib = "*"
rocket = "*"

[dependencies.tokio]
version = "0.2.13"
features = ["fs"]

[[bin]]
name = "test"
path = "src/lib.rs"
